--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
 </head>
 <body>
 
-    <h1 class="text-center m-5">Colour Palette</h1>
+    <h1 class="text-center m-5 display-2">Color Palette</h1>
 
     <main>
         <div class="container">
             <div class="row d-flex justify-content-around">
                 <div id="color1" class="col rectangulo">
-                    <p id="textoColor1">COLOUR 1</p>
+                    <p id="textoColor1">COLOR 1</p>
                 </div>
                 <div id="color2" class="col rectangulo">
-                    <p id="textoColor2">COLOUR 2</p>
+                    <p id="textoColor2">COLOR 2</p>
                 </div>
                 <div id="color3" class="col rectangulo">
-                    <p id="textoColor3">COLOUR 3</p>
+                    <p id="textoColor3">COLOR 3</p>
                 </div>
                 <div id="color4" class="col rectangulo">
-                    <p id="textoColor4">COLOUR 4</p>
+                    <p id="textoColor4">COLOR 4</p>
                 </div>
                 <div id="color5" class="col rectangulo">
-                    <p id="textoColor5">COLOUR 5</p>
+                    <p id="textoColor5">COLOR 5</p>
                 </div>
             </div>
         </div>
