--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- JS PROPIO -->
     <script defer src="javascript.js"></script>
 
-    <title>Document</title>
+    <title>Color by Frukost</title>
 </head>
 <body>
 
