--- a/index.html
+++ b/index.html
@@ -26,56 +26,56 @@
 </head>
 <body>
 
-    <h1 class="text-center m-5 display-3">Color Palette</h1>
+    <h1 class="text-center m-5 display-3">COLOR PALETTE</h1>
 
     <main>
         <div class="container">
             <div class="row d-flex justify-content-around">
-                <div class="col-sm-12 col-md-2">
+                <div class="col-sm-12 col-md-2 color">
                     <div id="color1" class="rectangulo">
                         <p id="textoColor1">COLOR 1</p>
                     </div>
-                    <div class="d-grid px-2 pt-2">
+                    <div class="d-grid px-2 pt-4">
                         <button type="button" onclick="darColor(R1,T1);" class="btn btn-outline-secondary btn-sm refresh ocultaBoton">
                             Refresh <i class="fas fa-redo"></i>
                         </button>                        
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-2">
+                <div class="col-sm-12 col-md-2 color">
                     <div id="color2" class="rectangulo">
                         <p id="textoColor2">COLOR 2</p>
                     </div>
-                    <div class="d-grid px-2 pt-2">
+                    <div class="d-grid px-2 pt-4">
                         <button type="button" onclick="darColor(R2,T2);" class="btn btn-outline-secondary btn-sm refresh ocultaBoton">
                             Refresh <i class="fas fa-redo"></i>
                         </button>                        
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-2">
+                <div class="col-sm-12 col-md-2 color">
                     <div id="color3" class="rectangulo">
                         <p id="textoColor3">COLOR 3</p>
                     </div>
-                    <div class="d-grid px-2 pt-2">
+                    <div class="d-grid px-2 pt-4">
                         <button type="button" onclick="darColor(R3,T3);" class="btn btn-outline-secondary btn-sm refresh ocultaBoton">
                             Refresh <i class="fas fa-redo"></i>
                         </button>                        
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-2">
+                <div class="col-sm-12 col-md-2 color">
                     <div id="color4" class="rectangulo">
                         <p id="textoColor4">COLOR 4</p>
                     </div>
-                    <div class="d-grid px-2 pt-2">
+                    <div class="d-grid px-2 pt-4">
                         <button type="button" onclick="darColor(R4,T4);" class="btn btn-outline-secondary btn-sm refresh ocultaBoton">
                             Refresh <i class="fas fa-redo"></i>
                         </button>                        
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-2">
+                <div class="col-sm-12 col-md-2 color">
                     <div id="color5" class="rectangulo">
                         <p id="textoColor5">COLOR 5</p>
                     </div>
-                    <div class="d-grid px-2 pt-2">
+                    <div class="d-grid px-2 pt-4">
                         <button type="button" onclick="darColor(R5,T5);" class="btn btn-outline-secondary btn-sm refresh ocultaBoton">
                             Refresh <i class="fas fa-redo"></i>
                         </button>                        
